# tIRC

./: .env  .gitignore  Modularization_Plan.md  README.md  README.txt  UI_Overhaul_Plan.md  UI_Refresh_Refactoring_Plan.md  architectural_notes.md  asyncio_migration_debug_plan.md  asyncio_migration_debug_plan_v2.md  build.py  cap_negotiator.py  channel_commands_handler.py  channel_moderation_commands_plan.md  client_commands_enhancement_plan.md  command_handler.py  config.py  context_manager.py  dcc_ctcp_handler.py  dcc_implementation_plan.md  dcc_manager.py  dcc_passive_offer_manager.py  dcc_protocol.py  dcc_send_manager.py  dcc_transfer.py  debugging_plan.md  debugging_plan_v3.md  dependency_resolution_plan.md  desired_caps_refactor_plan.md  event_manager.py  fun_commands_handler.py  information_commands_handler.py  information_commands_plan.md  input_handler.py  irc_client_logic.py  irc_message.py  irc_numeric_handlers.py  irc_protocol.py  magic_eight_ball_answers.txt  membership_handlers.py  (+33 more)
chats/: cursor_troubleshooting_python_installat.md
config/: pyterm_irc_config.ini  pyterm_irc_config.ini.example  tirc_config.ini  tirc_config.ini.example  triggers.json
docs/: DEVELOPMENT_GUIDE.md
features/: slap_items.txt
pyrc_core/: Architectural Refactor, Decompose IRCClient_Logic God Object.md  __init__.py  app_config.py  config_defs.py  context_manager.py  event_manager.py  network_handler.py  pylance_error_fix_phase2_plan.md  pylance_error_fix_plan.md  script_manager.py  state_manager.py
scripts/: ai_api_test_script.py  api_responder_agent.py  default_exit_handler.py  default_fun_commands.py  test_script.py  (+5 more)
(+303 files in other folders)
